# jieba_server

./: Cargo.toml  Makefile  README.md  build.rs
proto/: single_jieba.proto
sdk/: go.mod  go.sum  sdk.go  sdk_test.go
sdk/proto/: single_jieba.pb.go
src/: jieba.rs  lib.rs  main.rs  server.rs
