[package]
name = "jieba_server"
version = "0.1.0"
authors = ["dollarkiller <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
prost = "0.6"
once_cell = "1.5.2"
jieba-rs =  { version = "0.6.2", features = ["tfidf", "textrank"] }
tokio-test = "0.4.0"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

[build-dependencies]
tonic-build = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true

